@@ -1,6 +1,9 @@
 Release 0.6.3 (in development)
 ==============================
 
+* #241: Fix a crash building LaTeX output for documents that contain
+  a todolist directive.
+
 * #252: Make it easier to change the build dir in the Makefiles
   generated by quickstart.
 
